--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,9 @@ set(CMAKE_CXX_STANDARD 23)
 
 add_executable(mlir_toy main.cpp)
 
+find_package(LLVM 16.0.6 REQUIRED CONFIG)
+
+target_link_libraries(mlir_toy PRIVATE LLVM)
+
+install(TARGETS mlir_toy RUNTIME DESTINATION bin)
+
