find_package MLIR

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,7 @@ set(CMAKE_CXX_STANDARD 23)
 
 add_executable(mlir_toy main.cpp)
 
-find_package(LLVM 16.0.6 REQUIRED CONFIG)
-
-target_link_libraries(mlir_toy PRIVATE LLVM)
-
-install(TARGETS mlir_toy RUNTIME DESTINATION bin)
+set(LLVM_BUILD_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../llvm-project/build")
+set(MLIR_DIR "${LLVM_BUILD_PATH}/lib/cmake/mlir" CACHE PATH "" FORCE)
+find_package(MLIR REQUIRED CONFIG)
 
